--- a/css/media-query.css
+++ b/css/media-query.css
@@ -95,4 +95,13 @@ div#botao{
     top: -20%;
 }
 }
-    
+@media screen and (min-width: 769px) and (max-width: 1024px){
+    #filme{
+        position: relative;
+        margin-top: 0px;
+        width: 100%;
+        height: 70%;
+        left: -40%;
+        top: -80%;
+    }
+}
