--- a/css/media-query.css
+++ b/css/media-query.css
@@ -7,19 +7,110 @@ Small screens, laptops – 769px — 1024px. */
     padding: 0px;
 }
 @media screen and (max-width: 480px){
+    nav#menu{
+        display: flex;
+    }
+    nav#footer > ul, li {
+        padding: 2px;
+        margin: 0px;
+    }
+    a.menu {
+        padding: 5px;
+        font-size: 9pt;
+    }
+    #nome{
+        top: 140px;
+        height: 200px;
+        width: 350px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        backdrop-filter: blur(0px);
+    }
+    #cabecalho{
+        background-image: url(../imagens/1-pp.png);
+        box-shadow: inset 30px 2px 60px black;
+        background-repeat: no-repeat;
+        height: 500px;
+
+    }
+    div.next1{
+        margin-top: 80%;
+    }
+    div.info{
+        height: 170px;
+    }
+    section{
+        height: 400px;
+    }
+    #img2{
+        background-image: url(../imagens/2-pp.png);
+        height: 400px;
+        background-repeat: no-repeat;
+        
+    }
+    .slider{
+        height: 400px;
+        background-image: url(../imagens/3-pp.png);
+    }
+    .slide{
+        display: none;
+    }
+    .conteudo{
+        width: 300px;
+        margin-left: 20px;
+    }
+    
+    #img4{
+        background-image: url(../imagens/4-pp.png);
+        height: 400px;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+    div.next{
+        height: 25px;
+        width: 25px;
+        margin-right: 20px;
+        padding: 5px;
+    }
     h2{
-        font-size: 2em;
+        font-size: 1.3em;
     }
     .conteudo > p{
-        font-size: 1.2em;
+        font-size: 1em;
         text-align: justify;
-        padding-left: 10px;
+        padding-left: 5px;
     }
     #filme{
-        margin-top: 20px;
-        width: 500px;
-        height: 300px;
-        translate: 0% -50%;
+        position: relative;
+        margin-top: 0px;
+        width: 89%;
+        height: 50%;
+        left: -30%;
+        top: -70%;
+    }
+    div#buy{
+        height: 0px;
+        width: 0px;
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+    div > p {
+        margin-top: 0px;
+    }
+    div#botao{
+        margin-left: 60%;
+        height: 30px;
+        width: 150px;
+    }
+    div#banner{
+        background-image: url(../imagens/banner-pp.png);
+    }
+    div#banner > a{
+        font-size: 1em;
+        margin-bottom: 5px;
+    }
+    div#part5{
+        height: 500px;
     }
 }
 @media screen and (min-width: 481px) and (max-width: 768px){
@@ -37,10 +128,14 @@ a.menu{
 #cabecalho{
     background-image: url(../imagens/1-p.png);
     height: 400px;
-    background-position: left; 
+    background-position: center; 
 }
 h2{
     font-size: 2em;
+}
+.conteudo{
+    width: 600px;
+    margin-left: 20px;
 }
 .conteudo > p{
     font-size: 1.2em;
@@ -61,7 +156,8 @@ section{
 #img2{
     background-image: url(../imagens/2-p.png);
     height: 400px;
-    background-position: center;
+    
+    background-size: contain;
 }
 .slider{
     height: 400px;
